Ajoute un installateur CLI pour faciliter le déploiement
- Crée space-to-wall.installer : application console pour installer l'addin
- Détection automatique de la version Revit depuis le nom du fichier
- Support de l'installation depuis ZIP
- Script batch pour installation automatique (install.bat)
- Script de build pour créer un package de distribution complet
- Documentation complète de l'installateur et du processus de distribution
- Mise à jour du README principal avec instructions d'installation utilisateur

--- a/.gitignore
+++ b/.gitignore
@@ -448,3 +448,6 @@ Temporary Items
 ## Ignore deployed .addin files
 *.addin
 !**/space-to-wall.app/SpaceToWall.addin
+
+## Installer package output
+installer-package/
