--- a/space-to-wall.installer/space-to-wall.installer.csproj
+++ b/space-to-wall.installer/space-to-wall.installer.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\*.zip" />
+    <EmbeddedResource Include="SpaceToWall.addin" />
   </ItemGroup>
 
 </Project>
